# conf-reader

./: Cargo.toml  README.md
src/: config_from_lines.rs  file_reader.rs  json_from_conf.rs  lib.rs
src/file_reader/: conf_file_reader.rs  mod.rs  schema_file_reader.rs
src/model/: schema.rs
test_data/: test.schema
