[package]
name = "conf-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
rstest = "0.22.0"
tempfile = "3.12.0"
maplit = "1.0.2"
